add images to page

--- a/UI/index.html
+++ b/UI/index.html
@@ -11,7 +11,15 @@
 </head>
 
 <body>
-
+  <div class="welcome">
+    <div class="welcome-content">
+      <div class="delivery-girl">
+          <img src="img/delivery-girl.png" alt="delivery-girl">
+      </div>
+      <div class="words"></div>
+      <div class="auth-btn"></div>
+    </div>
+  </div>
 </body>
 
 </html>
