create script for progress bar

--- a/UI/index.html
+++ b/UI/index.html
@@ -16,7 +16,12 @@
       <div class="delivery-girl">
         <img src="img/delivery-girl.png" alt="delivery-girl">
       </div>
-      <div class="words"></div>
+      <div class="intro">
+        <div class="words"></div>
+        <div class="progress-bar">
+          <div class="progress-color"></div>
+        </div>
+      </div>
       <div class="auth-btn"></div>
     </div>
   </div>
