refactor page for responsiveness

--- a/UI/index.html
+++ b/UI/index.html
@@ -11,18 +11,30 @@
 </head>
 
 <body>
+
   <div class="welcome">
     <div class="welcome-content">
-      <div class="delivery-girl">
-        <img src="img/delivery-girl.png" alt="delivery-girl">
-      </div>
-      <div class="intro">
-        <div class="words"></div>
-        <div class="progress-bar">
-          <div class="progress-color"></div>
+      <div class="container">
+        <h1 class="page-title">Welcome to <span>FAST-FOOD-FAST</span></h1>
+
+        <div class="intro">
+          <div class="delivery-girl intro-content">
+            <img src="img/delivery-girl.png" alt="delivery-girl">
+          </div>
+          <div class="intro-words intro-content">
+            <div class="words"></div>
+            <div class="progress-bar">
+              <div class="progress-color"></div>
+            </div>
+          </div>
         </div>
+
+        <div class="auth-btn">
+          <input type="button" value="I'm new here">
+          <input type="button" value="Login" id="login">
+        </div>
+
       </div>
-      <div class="auth-btn"></div>
     </div>
   </div>
 </body>
