[ft #160367077] Add logo to the app

--- a/UI/index.html
+++ b/UI/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Fast-Food-Fast | Welcome</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" type="image/png" href="img/logo.png">
   <script src="js/script.js"></script>
 </head>
 
@@ -15,7 +16,7 @@
   <div class="welcome">
     <div class="welcome-content">
       <div class="container">
-        <h1 class="page-title">Welcome to <span>FAST-FOOD-FAST</span></h1>
+        <h1 class="page-title">Welcome to <span>FAST-FOOD-FAST</span><img src="img/logo.png" alt="logo"></h1>
 
         <div class="intro">
           <div class="delivery-girl intro-content">
