--- a/UI/index.html
+++ b/UI/index.html
@@ -32,10 +32,29 @@
 
         <div class="auth-btn">
           <input type="button" value="I'm new here">
-          <input type="button" value="Login" id="login">
+          <input type="button" value="Login" class="login">
         </div>
 
       </div>
+    </div>
+    <div class="modal">
+      <center>
+
+        <div class="auth-form signup">
+          <form action="">
+            <label for="name">Name</label>
+            <input type="text" name="name" id="name" required placeholder="Enter full name">
+            <label for="email">Email</label>
+            <input type="email" name="email" id="email" required placeholder="example@domain.com">
+            <label for="phone">Phone</label>
+            <input type="text" name="phone" id="phone" required placeholder="numbers only">
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" required placeholder="Create password">
+            <input type="submit" value="Submit" id="signup">
+          </form>
+        </div>
+
+      </center>
     </div>
   </div>
 </body>
