[ft #160367153] Adjust signup-form styles

--- a/UI/index.html
+++ b/UI/index.html
@@ -42,12 +42,14 @@
 
         <div class="auth-form signup">
           <form action="">
+            <span id="close">&#10062;</span> <br>
+            <legend class="form-title">Signup</legend>
             <label for="name">Name</label>
             <input type="text" name="name" id="name" required placeholder="Enter full name">
             <label for="email">Email</label>
             <input type="email" name="email" id="email" required placeholder="example@domain.com">
             <label for="phone">Phone</label>
-            <input type="text" name="phone" id="phone" required placeholder="numbers only">
+            <input type="text" name="phone" id="phone" required placeholder="Phone (080.....)">
             <label for="password">Password</label>
             <input type="password" id="password" name="password" required placeholder="Create password">
             <input type="submit" value="Submit" id="signup">
