[ft #160367187] create login form

--- a/UI/index.html
+++ b/UI/index.html
@@ -56,6 +56,18 @@
           </form>
         </div>
 
+        <div class="auth-form">
+          <form action="">
+            <span id="close">&#10062;</span> <br>
+            <legend class="form-title">Login</legend>
+            <label for="email">Email</label>
+            <input type="email" name="email" id="email" required placeholder="example@domain.com">
+            <label for="password">Password</label>
+            <input type="password" id="password1" name="password" required placeholder="Input your password">
+            <input type="submit" value="Submit" id="login">
+          </form>
+        </div>
+
       </center>
     </div>
   </div>
