[ch #160415021] Add animation to auth-form

--- a/UI/index.html
+++ b/UI/index.html
@@ -41,7 +41,7 @@
       <center>
 
         <div class="auth-form">
-          <form action="">
+          <form action="" class="form-before-click">
             <span id="close">&#10062;</span> <br>
             <legend class="form-title">Signup</legend>
             <label for="name">Name</label>
@@ -58,7 +58,7 @@
         </div>
 
         <div class="auth-form">
-          <form action="">
+          <form action="" class="form-before-click">
             <span id="close">&#10062;</span> <br>
             <legend class="form-title">Login</legend>
             <label for="email">Email</label>
