[ch #160415021] Write more script to toggle Login/Signup

--- a/UI/index.html
+++ b/UI/index.html
@@ -54,7 +54,7 @@
             <input type="password" id="password" name="password" required placeholder="Create password">
             <input type="submit" value="Submit">
           </form>
-          <p>Have an account? <span id="login1">Login</span></p>
+          <p>Have an account? <span id="login-modal">Login</span></p>
         </div>
 
         <div class="auth-form">
@@ -67,7 +67,7 @@
             <input type="password" id="password1" name="password" required placeholder="Input your password">
             <input type="submit" value="Submit">
           </form>
-          <p>I'm new here. <span id="signup1">Signup</span></p>
+          <p>I'm new here. <span id="signup-modal">Signup</span></p>
         </div>
 
       </center>
