--- a/UI/index.html
+++ b/UI/index.html
@@ -42,7 +42,7 @@
 
         <div class="auth-form">
           <form action="" class="form-before-click">
-            <span id="close">&#10062;</span> <br>
+            <span class="close close-signup">&#10062;</span> <br>
             <legend class="form-title">Signup</legend>
             <label for="name">Name</label>
             <input type="text" name="name" id="name" required placeholder="Enter full name">
@@ -59,7 +59,7 @@
 
         <div class="auth-form">
           <form action="" class="form-before-click">
-            <span id="close">&#10062;</span> <br>
+            <span class="close close-login">&#10062;</span> <br>
             <legend class="form-title">Login</legend>
             <label for="email">Email</label>
             <input type="email" name="email" id="email" required placeholder="example@domain.com">
