[ft #160367244] Add banner to page

--- a/UI/food-items.html
+++ b/UI/food-items.html
@@ -8,7 +8,6 @@
   <title>Fast-Food-Fast | Food Items</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" type="image/png" href="img/logo.png">
-  <script src="js/script.js"></script>
 </head>
 
 <body>
@@ -32,9 +31,21 @@
     </div>
   </header>
   <div class="banner">
+    <div class="banner1">
+      
+    </div>
+    <div class="banner2">
+
+    </div>
+    <div class="food-advert">
+      <div class="words"></div>
+      <div class="progress-bar">
+        <div class="progress-color"></div>
+      </div>
+    </div>
     
   </div>
-
+  <script src="js/script.js"></script>
 </body>
 
 </html>
