[ft #160367244] create sections for food-items

--- a/UI/food-items.html
+++ b/UI/food-items.html
@@ -45,7 +45,33 @@
     </div>
     
   </div>
+  <div class="scroll-div">
+    <div class="locate-div local">Local Delicacies</div>
+    <div class="locate-div snacks">Snacks</div>
+    <div class="locate-div rice">Rice</div>
+    <div class="locate-div pizza">Pizza</div>
+    <div class="locate-div others">Others</div>
+  </div>
+
+  <div class="food-items">
+    <section class="food" id="local">
+      local
+    </section>
+    <section class="food" id="snacks">
+      snacks
+    </section>
+    <section class="food" id="rice">
+      rice
+    </section>
+    <section class="food" id="pizza">
+      pizza
+    </section>
+    <section class="food" id="others">
+      others
+    </section>
+  </div>
   <script src="js/script.js"></script>
+  <script src="js/scroll.js"></script>
 </body>
 
 </html>
