[ft #160367244] Update script to scroll page to top

--- a/UI/food-items.html
+++ b/UI/food-items.html
@@ -18,7 +18,7 @@
       </div>
       <nav>
         <ul>
-          <li>MARCUS</li>
+          <li class="username">MARCUS</li>
           <li class="dropdown">
             <span>&#8711;</span>
             <div class="dropdown-content">
@@ -43,7 +43,7 @@
         <div class="progress-color"></div>
       </div>
     </div>
-    
+   
   </div>
   <div class="scroll-div">
     <div class="locate-div local">Local Delicacies</div>
@@ -70,6 +70,9 @@
       others
     </section>
   </div>
+
+  <div class="scroll-top">&#9652;</div>
+
   <script src="js/script.js"></script>
   <script src="js/scroll.js"></script>
 </body>
