[ft #160367244] Update food-items section

--- a/UI/food-items.html
+++ b/UI/food-items.html
@@ -55,23 +55,66 @@
 
   <div class="food-items">
     <section class="food" id="local">
-      local
+      <div class="category">
+        <div class="category-image local-img">Image-local</div>
+        <div class="items">
+          <div class="item">Item1</div>
+          <div class="item">Item2</div>
+          <div class="item">Item3</div>
+        </div>
+      </div>
     </section>
+
     <section class="food" id="snacks">
-      snacks
+      <div class="category">
+        <div class="category-image">Image-snacks</div>
+        <div class="items">
+          <div class="item">Item1</div>
+          <div class="item">Item2</div>
+          <div class="item">Item3</div>
+        </div>
+      </div>
     </section>
+
     <section class="food" id="rice">
-      rice
+      <div class="category">
+        <div class="category-image">Image-rice</div>
+        <div class="items">
+          <div class="item">Item1</div>
+          <div class="item">Item2</div>
+          <div class="item">Item3</div>
+        </div>
+      </div>
     </section>
+
     <section class="food" id="pizza">
-      pizza
+      <div class="category">
+        <div class="category-image">Image-pizza</div>
+        <div class="items">
+          <div class="item">Item1</div>
+          <div class="item">Item2</div>
+          <div class="item">Item3</div>
+        </div>
+      </div>
     </section>
+
     <section class="food" id="others">
-      others
+      <div class="category">
+        <div class="category-image">Image-others</div>
+        <div class="items">
+          <div class="item">Item1</div>
+          <div class="item">Item2</div>
+          <div class="item">Item3</div>
+        </div>
+      </div>
     </section>
   </div>
 
   <div class="scroll-top">&#9652;</div>
+
+  <footer class="footer">
+    &copy; <script>document.write(new Date().getFullYear());</script> <strong>Fast-Food-Fast</strong> developed & designed by <em>Marcdomain</em>
+  </footer>
 
   <script src="js/script.js"></script>
   <script src="js/scroll.js"></script>
