[ft #160367244] Add description to food-items

--- a/UI/food-items.html
+++ b/UI/food-items.html
@@ -58,9 +58,26 @@
       <div class="category">
         <div class="category-image local-img">Image-local</div>
         <div class="items">
-          <div class="item">Item1</div>
-          <div class="item">Item2</div>
-          <div class="item">Item3</div>
+          
+          <div class="item">
+            <p class="item-title">Eba + Vegetable + Turkey</p>
+            <p style="margin-top: 30px; padding: 10px;">
+              This is delicious. You will surely come for more.
+            </p>
+          </div>
+          <div class="item">
+            <p class="item-title">Wheat + Egusi + Isi-ewu</p>
+            <p style="margin-top: 30px; padding: 10px;">
+              This is delicious. You will surely come for more.
+            </p>
+          </div>
+          <div class="item">
+            <p class="item-title">Pandoyam + Fish + Ogbono</p>
+            <p style="margin-top: 30px; padding: 10px;">
+              This is delicious. You will surely come for more.
+            </p>
+          </div>
+
         </div>
       </div>
     </section>
