[ft #160367333] Create UI element that displays order-summary

--- a/UI/food-items.html
+++ b/UI/food-items.html
@@ -60,7 +60,7 @@
         <div class="items">
 
           <div class="item">
-            <p class="item-title">Eba + Vegetable + Turkey</p>
+            <p class="item-title">Eba+Vegetable+Turkey  <em>(#<span>2000</span>)</em></p>
             <p class="item-description">
               This is delicious. You will surely come for more.
             </p>
@@ -81,7 +81,7 @@
             </div>
           </div>
           <div class="item">
-            <p class="item-title">Wheat + Egusi + Isi-ewu</p>
+            <p class="item-title">Wheat+Egusi+Isi-ewu  <em>(#<span>3000</span>)</em></p>
             <p class="item-description">
               This is delicious. You will surely come for more.
             </p>
@@ -102,7 +102,7 @@
               </div>
           </div>
           <div class="item">
-            <p class="item-title">Pandoyam + Fish + Ogbono</p>
+            <p class="item-title">Pandoyam+Fish+Ogbono  <em>(#<span>1500</span>)</em></p>
             <p class="item-description">
               This is delicious. You will surely come for more.
             </p>
@@ -133,7 +133,7 @@
         <div class="items">
           
           <div class="item">
-            <p class="item-title">Meat pie</p>
+            <p class="item-title">Meat pie <em>(#<span>1000</span>)</em></p>
             <p class="item-description">
               This is delicious. You will surely come for more.
             </p>
@@ -154,7 +154,7 @@
               </div>
           </div>
           <div class="item">
-            <p class="item-title">Egg roll</p>
+            <p class="item-title">Egg roll <em>(#<span>800</span>)</em></p>
             <p class="item-description">
               This is delicious. You will surely come for more.
             </p>
@@ -175,7 +175,7 @@
               </div>
           </div>
           <div class="item">
-            <p class="item-title">Sausage</p>
+            <p class="item-title">Sausage <em>(#<span>700</span>)</em></p>
             <p class="item-description">
               This is delicious. You will surely come for more.
             </p>
@@ -420,6 +420,34 @@
     </section>
   </div>
 
+ 
+  <div class="modal">
+    <div class="order-summary">
+      <span class="close" style="color: #e65c00;">&#10062;</span> <br>
+      <h4>MEAT PIE</h4>
+      <div class="complete-order">
+        <img src="img/delivery-boy.jpg" alt="delivery-boy" class="delivery-boy">
+        <div class="order-info">
+          <div class="parameter">
+            <div>Unit price(#)</div>
+            <div>Quantity</div>
+            <div>Freight(#)</div>
+            <div class="total">Total(#)</div>
+          </div>
+          <div class="amount">
+            <div>1000</div>
+            <div>5.00</div>
+            <div>300</div>
+            <div class="total-amount">5300</div>
+          </div>
+        </div>
+      </div>
+      <div class="okay-order">
+        <input type="submit" value="Okay">
+      </div>
+    </div>
+  </div>
+
   <div class="scroll-top">&#9652;</div>
 
   <footer class="footer">
@@ -428,6 +456,7 @@
 
   <script src="js/script.js"></script>
   <script src="js/scroll.js"></script>
+  <script src="js/toggle.js"></script>
 </body>
 
 </html>
