Fix responsiveness of banner and  index.html

--- a/UI/food-items.html
+++ b/UI/food-items.html
@@ -67,8 +67,8 @@
             <div class="order-elements">
               <p class="orderNow">Order now</p>
               <div class="order-input">
-                <input type="number" class="quantity" placeholder="Qty">
-                <select class="location">
+                <input type="number" required class="quantity" placeholder="Qty">
+                <select required class="location">
                   <option selected>delivery location</option>
                   <option value="200">Oshodi #200</option>
                   <option value="1000">Ikorodu #1000</option>
