--- a/UI/index.html
+++ b/UI/index.html
@@ -62,7 +62,7 @@
             <span class="close close-login">&#10062;</span> <br>
             <legend class="form-title">Login</legend>
             <label for="email">Email</label>
-            <input type="email" name="email" id="email" required placeholder="example@domain.com">
+            <input type="email" name="email" id="email1" required placeholder="example@domain.com">
             <label for="password">Password</label>
             <input type="password" id="password1" name="password" required placeholder="Input your password">
             <input type="submit" value="Submit">
