[ft #160367441] Fix mobile display of order-history

--- a/UI/user-orders.html
+++ b/UI/user-orders.html
@@ -31,23 +31,39 @@
     </div>
   </header>
 
-  <div class="page-title">
+  <div class="banner">
+    <div class="banner1">
+
+    </div>
+    <div class="banner2">
+
+    </div>
+    <div class="food-advert">
+      <div class="words"></div>
+      <div class="progress-bar">
+        <div class="progress-color"></div>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="page-title order-history-title">
     <h1>Order History</h1>
   </div>
   <div class="orders-list">
-    <div class="order-history">
-      <div class="order-column column-head">ID</div>
-      <div class="order-column column-head">Date</div>
-      <div class="order-column column-head">Food Item</div>
-      <div class="order-column column-head">Quantity</div>
-      <div class="order-column column-head">Unit Cost</div>
-      <div class="order-column column-head">Sub Total</div>
-      <div class="order-column column-head">Freight</div>
-      <div class="order-column column-head">Total</div>
-      <div class="order-column column-head">Status</div>
+    <div class="order-history column-head">
+      <div class="order-column">ID</div>
+      <div class="order-column">Date</div>
+      <div class="order-column">Food Item</div>
+      <div class="order-column">Quantity</div>
+      <div class="order-column">Unit Cost</div>
+      <div class="order-column">Sub Total</div>
+      <div class="order-column">Freight</div>
+      <div class="order-column">Total</div>
+      <div class="order-column">Status</div>
     </div>
-    <div class="order-history">
-      <div class="order-column">1</div>
+    <div class="order-history order1">
+      <div class="order-column">3</div>
       <div class="order-column">09-13-2018</div>
       <div class="order-column">Meet Pie</div>
       <div class="order-column">5</div>
@@ -55,21 +71,89 @@
       <div class="order-column">5000</div>
       <div class="order-column">Yaba - #300</div>
       <div class="order-column">#6300</div>
+      <div class="order-column">Accepted</div>
+    </div>
+    <div class="order-history order2">
+      <div class="order-column">22</div>
+      <div class="order-column">08-13-2018</div>
+      <div class="order-column">Sausage</div>
+      <div class="order-column">2</div>
+      <div class="order-column">800</div>
+      <div class="order-column">1600</div>
+      <div class="order-column">Oshodi - #200</div>
+      <div class="order-column">#1800</div>
       <div class="order-column">Completed</div>
     </div>
     <div class="order-history">
-
+      <div class="order-column">27</div>
+      <div class="order-column">08-13-2018</div>
+      <div class="order-column">Peperoni Pizza</div>
+      <div class="order-column">3</div>
+      <div class="order-column">2000</div>
+      <div class="order-column">6000</div>
+      <div class="order-column">Oshodi - #200</div>
+      <div class="order-column">#6200</div>
+      <div class="order-column">Completed</div>
     </div>
-    <div class="order-history">order4</div>
-    <div class="order-history">order5</div>
-    <div class="order-history">order6</div>
+    <div class="order-history order4">
+      <div class="order-column">41</div>
+      <div class="order-column">08-13-2018</div>
+      <div class="order-column">Peperoni Pizza</div>
+      <div class="order-column">15</div>
+      <div class="order-column">2000</div>
+      <div class="order-column">6000</div>
+      <div class="order-column">Ikorodu - #500</div>
+      <div class="order-column">#6200</div>
+      <div class="order-column">Declined</div>
+    </div>
   </div>
+
+  <!-- Mobile -->
+  <div class="order-mobile">
+    <div class="order1-mobile mobile">
+      <div class="head view">
+        <div class="order-column">ID</div>
+        <div class="order-column">Date</div>
+        <div class="order-column">Food Item</div>
+        <div class="order-column">Quantity</div>
+        <div class="order-column">Unit Cost</div>
+        <div class="order-column">Sub Total</div>
+        <div class="order-column">Freight</div>
+        <div class="order-column">Total</div>
+        <div class="order-column">Status</div>
+      </div>
+      <div class="head-content view">
+        <div class="order-column">3</div>
+        <div class="order-column">09-13-2018</div>
+        <div class="order-column">Meet Pie</div>
+        <div class="order-column">5</div>
+        <div class="order-column">1000</div>
+        <div class="order-column">5000</div>
+        <div class="order-column">Yaba - #300</div>
+        <div class="order-column">#6300</div>
+        <div class="order-column">Accepted</div>
+      </div>
+    </div>
+    <div class="order2-mobile mobile">
+      2
+    </div>
+    <div class="order3-mobile mobile">
+      3
+    </div>
+    <div class="order4-mobile mobile">
+      4
+    </div>
+  </div>
+  <!-- Mobile -->
 
   <div class="scroll-top">&#9652;</div>
 
   <footer class="footer">
-    &copy; <script>document.write(new Date().getFullYear());</script> <strong>Fast-Food-Fast</strong> developed & designed by <em>Marcdomain</em>
+    &copy; <script>
+      document.write(new Date().getFullYear());
+    </script> <strong>Fast-Food-Fast</strong> developed & designed by <em>Marcdomain</em>
   </footer>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
