[ft #160367441] Update order-history mobile view

--- a/UI/user-orders.html
+++ b/UI/user-orders.html
@@ -135,13 +135,76 @@
       </div>
     </div>
     <div class="order2-mobile mobile">
-      2
+      <div class="head view">
+        <div class="order-column">ID</div>
+        <div class="order-column">Date</div>
+        <div class="order-column">Food Item</div>
+        <div class="order-column">Quantity</div>
+        <div class="order-column">Unit Cost</div>
+        <div class="order-column">Sub Total</div>
+        <div class="order-column">Freight</div>
+        <div class="order-column">Total</div>
+        <div class="order-column">Status</div>
+      </div>
+      <div class="head-content view">
+        <div class="order-column">3</div>
+        <div class="order-column">09-13-2018</div>
+        <div class="order-column">Meet Pie</div>
+        <div class="order-column">5</div>
+        <div class="order-column">1000</div>
+        <div class="order-column">5000</div>
+        <div class="order-column">Yaba - #300</div>
+        <div class="order-column">#6300</div>
+        <div class="order-column">Accepted</div>
+      </div>
     </div>
     <div class="order3-mobile mobile">
-      3
+      <div class="head view">
+        <div class="order-column">ID</div>
+        <div class="order-column">Date</div>
+        <div class="order-column">Food Item</div>
+        <div class="order-column">Quantity</div>
+        <div class="order-column">Unit Cost</div>
+        <div class="order-column">Sub Total</div>
+        <div class="order-column">Freight</div>
+        <div class="order-column">Total</div>
+        <div class="order-column">Status</div>
+      </div>
+      <div class="head-content view">
+        <div class="order-column">3</div>
+        <div class="order-column">09-13-2018</div>
+        <div class="order-column">Meet Pie</div>
+        <div class="order-column">5</div>
+        <div class="order-column">1000</div>
+        <div class="order-column">5000</div>
+        <div class="order-column">Yaba - #300</div>
+        <div class="order-column">#6300</div>
+        <div class="order-column">Accepted</div>
+      </div>
     </div>
     <div class="order4-mobile mobile">
-      4
+      <div class="head view">
+        <div class="order-column">ID</div>
+        <div class="order-column">Date</div>
+        <div class="order-column">Food Item</div>
+        <div class="order-column">Quantity</div>
+        <div class="order-column">Unit Cost</div>
+        <div class="order-column">Sub Total</div>
+        <div class="order-column">Freight</div>
+        <div class="order-column">Total</div>
+        <div class="order-column">Status</div>
+      </div>
+      <div class="head-content view">
+        <div class="order-column">3</div>
+        <div class="order-column">09-13-2018</div>
+        <div class="order-column">Meet Pie</div>
+        <div class="order-column">5</div>
+        <div class="order-column">1000</div>
+        <div class="order-column">5000</div>
+        <div class="order-column">Yaba - #300</div>
+        <div class="order-column">#6300</div>
+        <div class="order-column">Accepted</div>
+      </div>
     </div>
   </div>
   <!-- Mobile -->
