--- a/UI/add-food-item.html
+++ b/UI/add-food-item.html
@@ -19,7 +19,7 @@
         <div class="menu menu2">View All Orders</div>
         <div class="menu menu3">View All Items</div>
       </div>
-      <div class="menu-bottom">bottom</div>
+      <div class="menu-bottom"></div>
     </div>
     <div class="dashboard-content">
       <div class="add-item">
