--- a/UI/admin-orders.html
+++ b/UI/admin-orders.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,13 +8,14 @@
   <title>Fast-Food-Fast | All Orders</title>
   <link rel="stylesheet" href="css/admin.css">
 </head>
+
 <body>
   <div class="dashboard">
     <div class="dashboard-menu">
       <div class="menu-top">
         <div class="welcome">
           <img src="img/logo.png" alt="logo">
-          <span>Fast-Food-Fast</span>
+          <span>Fast Food Fast</span>
         </div>
         <div class="menu menu1">Add Food Item</div>
         <div class="menu menu2">View All Orders</div>
@@ -86,10 +88,118 @@
             <div class="order-column status">Completed</div>
           </div>
         </div>
-    
+
+        <!-- Mobile -->
+        <div class="order-mobile">
+          <div class="order1-mobile mobile">
+            <div class="head view">
+              <div class="order-column">ID</div>
+              <div class="order-column">Date</div>
+              <div class="order-column">Item</div>
+              <div class="order-column">Category</div>
+              <div class="order-column">Qty</div>
+              <div class="order-column">Cost(#)</div>
+              <div class="order-column">Subtotal(#)</div>
+              <div class="order-column">Freight(#)</div>
+              <div class="order-column">Total(#)</div>
+              <div class="order-column status-col">Status</div>
+            </div>
+            <div class="head-content view">
+              <div class="order-column">1</div>
+              <div class="order-column">13-09-2018</div>
+              <div class="order-column">Meet Pie</div>
+              <div class="order-column">Snacks</div>
+              <div class="order-column">3</div>
+              <div class="order-column">1000</div>
+              <div class="order-column">3000</div>
+              <div class="order-column">Yaba- 300</div>
+              <div class="order-column">3300</div>
+              <div class="order-column status">Pending</div>
+            </div>
+          </div>
+          <div class="order2-mobile mobile">
+            <div class="head view">
+              <div class="order-column">ID</div>
+              <div class="order-column">Date</div>
+              <div class="order-column">Item</div>
+              <div class="order-column">Category</div>
+              <div class="order-column">Qty</div>
+              <div class="order-column">Cost(#)</div>
+              <div class="order-column">Subtotal(#)</div>
+              <div class="order-column">Freight(#)</div>
+              <div class="order-column">Total(#)</div>
+              <div class="order-column status-col">Status</div>
+            </div>
+            <div class="head-content view">
+              <div class="order-column">2</div>
+            <div class="order-column">13-09-2018</div>
+            <div class="order-column">Rice & Turkey</div>
+            <div class="order-column">Rice</div>
+            <div class="order-column">5</div>
+            <div class="order-column">2000</div>
+            <div class="order-column">10000</div>
+            <div class="order-column">Yaba- 300</div>
+            <div class="order-column">10300</div>
+            <div class="order-column status">Accepted</div>
+            </div>
+          </div>
+          <div class="order3-mobile mobile">
+            <div class="head view">
+              <div class="order-column">ID</div>
+              <div class="order-column">Date</div>
+              <div class="order-column">Food Item</div>
+              <div class="order-column">Quantity</div>
+              <div class="order-column">Unit Cost</div>
+              <div class="order-column">Sub Total</div>
+              <div class="order-column">Freight</div>
+              <div class="order-column">Total</div>
+              <div class="order-column">Status</div>
+            </div>
+            <div class="head-content view">
+              <div class="order-column">3</div>
+            <div class="order-column">13-09-2018</div>
+            <div class="order-column">Pandoyam & Isiewu</div>
+            <div class="order-column">Local</div>
+            <div class="order-column">1</div>
+            <div class="order-column">2000</div>
+            <div class="order-column">2000</div>
+            <div class="order-column">Ikorodu- 500</div>
+            <div class="order-column">2500</div>
+            <div class="order-column status">Declined</div>
+            </div>
+          </div>
+          <div class="order4-mobile mobile">
+            <div class="head view">
+              <div class="order-column">ID</div>
+              <div class="order-column">Date</div>
+              <div class="order-column">Food Item</div>
+              <div class="order-column">Quantity</div>
+              <div class="order-column">Unit Cost</div>
+              <div class="order-column">Sub Total</div>
+              <div class="order-column">Freight</div>
+              <div class="order-column">Total</div>
+              <div class="order-column">Status</div>
+            </div>
+            <div class="head-content view">
+              <div class="order-column">4</div>
+              <div class="order-column">13-09-2018</div>
+              <div class="order-column">Sausage</div>
+              <div class="order-column">Snacks</div>
+              <div class="order-column">3</div>
+              <div class="order-column">1000</div>
+              <div class="order-column">3000</div>
+              <div class="order-column">Yaba- #300</div>
+              <div class="order-column">3300</div>
+              <div class="order-column status">Completed</div>
+            </div>
+          </div>
+        </div>
+        <!-- Mobile -->
+
       </div>
 
     </div>
   </div>
 </body>
+
 </html>
