Fix food-items-page responsiveness

--- a/UI/admin-food-items.html
+++ b/UI/admin-food-items.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
   <title>Fast-Food-Fast | Add Item</title>
   <link rel="stylesheet" href="css/admin.css">
 </head>
+
 <body>
   <div class="dashboard">
     <div class="dashboard-menu">
@@ -24,7 +26,7 @@
     <div class="dashboard-content">
       <div>
 
-        <div class="orders-list">
+        <div class="orders-list admin-orders">
           <div class="order-history column-head">
             <div class="order-column">ID</div>
             <div class="order-column">Item Name</div>
@@ -71,10 +73,98 @@
             <div class="order-column delete">&#8855;</div>
           </div>
         </div>
-    
+
+
+        <!-- Mobile -->
+        <div class="order-mobile admin-mobile-item">
+          <div class="order1-mobile mobile">
+            <div class="head view">
+              <div class="order-column">ID</div>
+              <div class="order-column">Item Name</div>
+              <div class="order-column">Category</div>
+              <div class="order-column">Quantity</div>
+              <div class="order-column">Unit Cost</div>
+              <div class="order-column">Update</div>
+              <div class="order-column">Delete</div>
+            </div>
+            <div class="head-content view">
+              <div class="order-column">1</div>
+              <div class="order-column">Meet Pie</div>
+              <div class="order-column">Snacks</div>
+              <div class="order-column">100</div>
+              <div class="order-column">1000</div>
+              <div class="order-column edit">&#9997;</div>
+              <div class="order-column delete">&#8855;</div>
+            </div>
+          </div>
+          <div class="order2-mobile mobile">
+            <div class="head view">
+              <div class="order-column">ID</div>
+              <div class="order-column">Item Name</div>
+              <div class="order-column">Category</div>
+              <div class="order-column">Quantity</div>
+              <div class="order-column">Unit Cost</div>
+              <div class="order-column">Update</div>
+              <div class="order-column">Delete</div>
+            </div>
+            <div class="head-content view">
+              <div class="order-column">2</div>
+              <div class="order-column">2</div>
+              <div class="order-column">Sausage</div>
+              <div class="order-column">Snacks</div>
+              <div class="order-column">250</div>
+              <div class="order-column">800</div>
+              <div class="order-column edit">&#9997;</div>
+              <div class="order-column delete">&#8855;</div>
+            </div>
+          </div>
+          <div class="order3-mobile mobile">
+            <div class="head view">
+              <div class="order-column">ID</div>
+              <div class="order-column">Item Name</div>
+              <div class="order-column">Category</div>
+              <div class="order-column">Quantity</div>
+              <div class="order-column">Unit Cost</div>
+              <div class="order-column">Update</div>
+              <div class="order-column">Delete</div>
+            </div>
+            <div class="head-content view">
+              <div class="order-column">3</div>
+              <div class="order-column">Peperoni Pizza</div>
+              <div class="order-column">Pizza</div>
+              <div class="order-column">48</div>
+              <div class="order-column">2000</div>
+              <div class="order-column edit">&#9997;</div>
+              <div class="order-column delete">&#8855;</div>
+            </div>
+          </div>
+          <div class="order4-mobile mobile">
+            <div class="head view">
+              <div class="order-column">ID</div>
+              <div class="order-column">Item Name</div>
+              <div class="order-column">Category</div>
+              <div class="order-column">Quantity</div>
+              <div class="order-column">Unit Cost</div>
+              <div class="order-column">Update</div>
+              <div class="order-column">Delete</div>
+            </div>
+            <div class="head-content view">
+              <div class="order-column">4</div>
+              <div class="order-column">Rice & Turkey</div>
+              <div class="order-column">Rice</div>
+              <div class="order-column">80</div>
+              <div class="order-column">2000</div>
+              <div class="order-column edit">&#9997;</div>
+              <div class="order-column delete">&#8855;</div>
+            </div>
+          </div>
+        </div>
+        <!-- Mobile -->
+
       </div>
 
     </div>
   </div>
 </body>
+
 </html>
