[ft #160370945] create UI element to view specific order

--- a/UI/admin-orders.html
+++ b/UI/admin-orders.html
@@ -12,6 +12,44 @@
 <body>
   <div class="dashboard">
     <div class="dashboard-menu">
+      
+      <div class="modal">
+        <div class="specific-order-div">
+          <span class="close" id="closeOrder">&#10062;</span><br><br>
+          <div class="specific-order">
+            <div class="fields">
+              <div class="order-column">ID</div>
+              <div class="order-column">Date</div>
+              <div class="order-column">Item</div>
+              <div class="order-column">Category</div>
+              <div class="order-column">Qty</div>
+              <div class="order-column">Cost(#)</div>
+              <div class="order-column">Subtotal(#)</div>
+              <div class="order-column">Freight(#)</div>
+              <div class="order-column">Total(#)</div>
+              <div class="order-column status-col">Status</div>
+            </div>
+            <div class="values">
+              <div class="order-column">1</div>
+              <div class="order-column">13-09-2018</div>
+              <div class="order-column">Meet Pie</div>
+              <div class="order-column">Snacks</div>
+              <div class="order-column">3</div>
+              <div class="order-column">1000</div>
+              <div class="order-column">3000</div>
+              <div class="order-column">Yaba- 300</div>
+              <div class="order-column">3300</div>
+              <div class="order-column status">
+                <span>Accept</span> <span style="color: #000">|</span>
+                <span>Decline</span> <span style="color: #000">|</span>
+                <span>Complete</span>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+      
       <div class="menu-top">
         <div class="welcome">
           <img src="img/logo.png" alt="logo">
@@ -132,15 +170,15 @@
             </div>
             <div class="head-content view">
               <div class="order-column">2</div>
-            <div class="order-column">13-09-2018</div>
-            <div class="order-column">Rice & Turkey</div>
-            <div class="order-column">Rice</div>
-            <div class="order-column">5</div>
-            <div class="order-column">2000</div>
-            <div class="order-column">10000</div>
-            <div class="order-column">Yaba- 300</div>
-            <div class="order-column">10300</div>
-            <div class="order-column status">Accepted</div>
+              <div class="order-column">13-09-2018</div>
+              <div class="order-column">Rice & Turkey</div>
+              <div class="order-column">Rice</div>
+              <div class="order-column">5</div>
+              <div class="order-column">2000</div>
+              <div class="order-column">10000</div>
+              <div class="order-column">Yaba- 300</div>
+              <div class="order-column">10300</div>
+              <div class="order-column status">Accepted</div>
             </div>
           </div>
           <div class="order3-mobile mobile">
@@ -157,15 +195,15 @@
             </div>
             <div class="head-content view">
               <div class="order-column">3</div>
-            <div class="order-column">13-09-2018</div>
-            <div class="order-column">Pandoyam & Isiewu</div>
-            <div class="order-column">Local</div>
-            <div class="order-column">1</div>
-            <div class="order-column">2000</div>
-            <div class="order-column">2000</div>
-            <div class="order-column">Ikorodu- 500</div>
-            <div class="order-column">2500</div>
-            <div class="order-column status">Declined</div>
+              <div class="order-column">13-09-2018</div>
+              <div class="order-column">Pandoyam & Isiewu</div>
+              <div class="order-column">Local</div>
+              <div class="order-column">1</div>
+              <div class="order-column">2000</div>
+              <div class="order-column">2000</div>
+              <div class="order-column">Ikorodu- 500</div>
+              <div class="order-column">2500</div>
+              <div class="order-column status">Declined</div>
             </div>
           </div>
           <div class="order4-mobile mobile">
